Complete Integration of Plaid Link, Sentry and Dwolla

--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ PLAID_PRODUCTS=auth,transactions,identity
 PLAID_COUNTRY_CODES=US,CA
 
 #DWOLLA
-DWOLLA_KEY=
-DWOLLA_SECRET=
+DWOLLA_KEY=Ngh2lyV8eta6QzJ9vOSoiWevHZlPa4bSyCTazLoTDURa426BP2
+DWOLLA_SECRET=DHA0rXaouQRBSkKisHejptnRLwsHmq5JhnCDJUNKTOmAzr9W3a
 DWOLLA_BASE_URL=https://api-sandbox.dwolla.com
 DWOLLA_ENV=sandbox
